--- a/index.html
+++ b/index.html
@@ -72,16 +72,23 @@
    }
    .linkdin{
     color: #0077b5;
+    /* padding: 6px; */
    }
-   .linkdin:visited{
+   /* .linkdin:visited{
     color: #0077b5;
+   } */
+ 
+   .twitter{
+       color: #00acee ;
    }
-   .linkdin:hover{
-       /* color: #ffffff; */
-       /* padding: 10px; */
-      /* background-color: #0077b5; */
-      color: #0077b5;
+   .twitter:visited{
+    color: #00acee ;
    }
+  
+   .twitter:hover{
+       padding: 2px 0px;
+   }
+
    @media  (max-width:980px) and (min-width:500px) {
     .heading{
             font-size: 40px;
