--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <body onload="myfunction()">
    
 <div id="loading"></div>
-     <a href="http://127.0.0.1:5501/speechtext.html"><img src="https://see.fontimg.com/api/renderfont4/ywwaM/eyJyIjoiZnMiLCJoIjo5OCwidyI6MTUwMCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiJ9/QW51cmFn/theprestigesignature.png" class="logo" alt="Anurag"></a>
+     <a href="https://anuraggarg.me/"><img src="https://see.fontimg.com/api/renderfont4/ywwaM/eyJyIjoiZnMiLCJoIjo5OCwidyI6MTUwMCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiJ9/QW51cmFn/theprestigesignature.png" class="logo" alt="Anurag"></a>
     
      <span><a href="https://twitter.com/anuraggarg_3" class="twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-twitter"></a></i></span>
     <span ><a href="https://github.com/anuraggarg3" class="github" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-github"></a></i></span>
@@ -269,6 +269,7 @@
  </ul>
 </div>
 <span class="changeviews"><span class="views"> Views : <div class="material-icons viewicon" >visibility</div><span class="counter" id="count"></span></span > </span>
+You Can Contribute to this website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank" rel="noopener noreferrer">Click here</a>
 <div style=" background-color:rgba(246, 246, 246) ;">
 <hr class="rule" >
 
