--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CP Resources</title>
 <link rel="shortcut icon" href="fevicon.png" type="image/x-icon">
-<meta name="description" content="The Best Resources For Competitive Programming.All resources at one place,Learning resouces,CP resources" >
+<meta name="description" content="The Best Resources For Competitive Programming.All resources at one place,Learning Resources,CP Resources" >
 <meta name="description" content="anuraggarg ,anuraggarg3,anuraggarg_3,anuraggarg me">
 <meta name="keywords" content="anuraggarg_3 , anuraggarg , anurag, anurag cp, cp resources, cp resouce,Competitive Programming guide">
 <meta name="og:title" property="og:title" content="anuraggarg ,anurag garg,cp resources">
@@ -52,25 +52,28 @@
        <li class="list"><a href="https://www.youtube.com/watch?v=hW8PrQrvMNc&list=PL_z_8CaSLPWdtY9W22VjnPxG30CXNZpI9&ab_channel=AdityaVerma" target="_blank"  class="list"rel="noopener noreferrer">Heap</a></li>
        <li class="list"><a href="https://www.youtube.com/watch?v=0IAPZzGSbME&list=PLDN4rrl48XKpZkf03iYFl-O29szjTrs_O&ab_channel=AbdulBari" target="_blank" class="list" rel="noopener noreferrer">Algorithm</a></li>
        <li class="list"><a href="https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ&ab_channel=ApnaCollege" target="_blank" class="list" rel="noopener noreferrer">C++ Programming Language</a></li>
-    </ul>
+       <li class="list"><a href="https://www.youtube.com/playlist?list=PLgUwDviBIf0rGEWe64KWas0Nryn7SCRWw" target="_blank" class="list" rel="noopener noreferrer">Graphs</a></li>
+        <li class="list"><a href="https://www.youtube.com/playlist?list=PLgUwDviBIf0q8Hkd7bK2Bpryj2xVJk8Vk" target="_blank" class="list" rel="noopener noreferrer">Trees</a></li>    
+	    
+	 </ul>
     <li class="mainlist">Best Practice Question Sheet </li>
     <ul>
-        <li class="list"><a href="https://a2oj.com/Ladders.html" target="_blank" rel="noopener noreferrer" class="list">A20J</a></li>
-        <li class="list"><a href="https://cses.fi/problemset/" target="_blank" rel="noopener noreferrer" class="list">CSES</a></li>
+        <li class="list"><a href="https://a2oj.com/Ladders.html" target="_blank" rel="noopener noreferrer" class="list">A20J Practice Sheet</a></li>
+        <li class="list"><a href="https://cses.fi/problemset/" target="_blank" rel="noopener noreferrer" class="list">CSES Problems</a></li>
         <li class="list"><a href="https://algoshots.herokuapp.com/" target="_blank" class="list" rel="noopener noreferrer">AlgoShots</a></li>
     </ul>
-    <li class="mainlist">Coding Platform</li>
+    <li class="mainlist">Top Coding Platform</li>
     <ul>
-        <li class="list"><a href="https://codeforces.com/" target="_blank" class="list" rel="noopener noreferrer">codeforces</a></li>
-        <li class="list"><a href="https://www.codechef.com/" target="_blank" class="list" rel="noopener noreferrer">codechef</a></li>
-        <li class="list"><a href="https://atcoder.jp/" class="list" target="_blank" rel="noopener noreferrer">Atcoder</a></li>
+        <li class="list"><a href="https://codeforces.com/" target="_blank" class="list" rel="noopener noreferrer">CodeForces</a></li>
+        <li class="list"><a href="https://www.codechef.com/" target="_blank" class="list" rel="noopener noreferrer">CodeChef</a></li>
+        <li class="list"><a href="https://atcoder.jp/" class="list" target="_blank" rel="noopener noreferrer">AtCoder</a></li>
         <li class="list"><a href="https://www.topcoder.com/thrive/tracks?track=Competitive%20Programming" target="_blank" rel="noopener noreferrer" class="list">TopCoder</a></li>
-        <li class="list"><a href="https://leetcode.com/" class="list" target="_blank" rel="noopener noreferrer">Leetcode</a></li>
+        <li class="list"><a href="https://leetcode.com/" class="list" target="_blank" rel="noopener noreferrer">LeetCode</a></li>
     </ul>
  </ul>
 </div>
 <span class="changeviews"><span class="views"> Views : <div class="material-icons viewicon" >visibility</div><span class="counter" id="count"></span></span > </span>
-You Can Contribute to this website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank" rel="noopener noreferrer">Click here</a>
+You Can Contribute to this website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank" rel="noopener noreferrer">Click Here</a>
 <div style=" background-color:rgba(246, 246, 246) ;">
 <hr class="rule" >
 
