Did styling to the main website using css and added resource to Java programming language.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
      <li class="list"><a href="https://www.geeksforgeeks.org/data-structures/?ref=shm" class="list"target="_blank" rel="noopener noreferrer">Data structure</a></li>
      <li class="list"><a href="https://www.geeksforgeeks.org/fundamentals-of-algorithms/?ref=shm" class="list" target="_blank" rel="noopener noreferrer">Algorithms</a></li>
      <li class="list"><a href="https://www.geeksforgeeks.org/c-plus-plus/?ref=shm" target="_blank" class="list" rel="noopener noreferrer">C++ Programming Language</a></li>
+     <li class="list"><a href="https://www.tutorialspoint.com/java/index.htm" target="_blank" class="list" rel="noopener noreferrer">Java Programming Language</a></li>
     </ul>
     <li class="mainlist">Free Online Lectures</li>
     <ul>
@@ -70,7 +71,7 @@
  </ul>
 </div>
 <span class="changeviews"><span class="views"> Views : <div class="material-icons viewicon" >visibility</div><span class="counter" id="count"></span></span > </span>
-You Can Contribute to this website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank" rel="noopener noreferrer">Click here</a>
+You Can Contribute to this website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank" rel="noopener noreferrer" class="btn">Click here</a>
 <div style=" background-color:rgba(246, 246, 246) ;">
 <hr class="rule" >
 
