--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 <div id="loading"></div>
      <a href="https://anuraggarg.me/"><img src="https://see.fontimg.com/api/renderfont4/ywwaM/eyJyIjoiZnMiLCJoIjo5OCwidyI6MTUwMCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiJ9/QW51cmFn/theprestigesignature.png" class="logo" alt="Anurag"></a>
     
-     <span><a href="https://twitter.com/anuraggarg_3" class="twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-twitter"></a></i></span>
-    <span ><a href="https://github.com/anuraggarg3" class="github" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-github"></a></i></span>
-    <span ><a href="https://www.linkedin.com/in/anurag-garg-760109213/" target="_blank" rel="noopener noreferrer" class="linkdin"><i class="fab fa fa-linkedin"></i></a></i></span>
+    	<span><a href="https://twitter.com/anuraggarg_3" class="twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-twitter"></a></i></span>
+	<span><a href="https://facebook.com/anuraggarg_3" class="facebook" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-facebook"></a></i></span>
+    	<span ><a href="https://github.com/anuraggarg3" class="github" target="_blank" rel="noopener noreferrer"><i class="fab fa fa-github"></a></i></span>
+    	<span ><a href="https://www.linkedin.com/in/anurag-garg-760109213/" target="_blank" rel="noopener noreferrer" class="linkdin"><i class="fab fa fa-linkedin"></i></a></i></span>
  <div class="heading"> The Best Resources For Competitive Programming</div>
  <div class="subheading">All resources at one place</div>
 
