--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <li class="mainlist">Coding Platform</li>
             <ul>
                 <li class="list"><a href="https://codeforces.com/" target="_blank" class="list"
-                        rel="noopener noreferrer">codeforces</a></li>
+                        rel="noopener noreferrer">Codeforces</a></li>
                 <li class="list"><a href="https://www.codechef.com/" target="_blank" class="list"
-                        rel="noopener noreferrer">codechef</a></li>
+                        rel="noopener noreferrer">Codechef</a></li>
                 <li class="list"><a href="https://atcoder.jp/" class="list" target="_blank"
                         rel="noopener noreferrer">Atcoder</a></li>
                 <li class="list"><a href="https://www.topcoder.com/thrive/tracks?track=Competitive%20Programming"
