--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                         class="list">CSES</a></li>
                 <li class="list"><a href="https://algoshots.herokuapp.com/" target="_blank" class="list"
                         rel="noopener noreferrer">AlgoShots</a></li>
+                <li class="list"><a href="https://www.codingninjas.com/codestudio/guided-paths/competitive-programming" target="_blank" class="list"
+                        rel="noopener noreferrer">codestudio</a></li>
             </ul>
             <li class="mainlist">Coding Platform</li>
             <ul>
