added free cp playlist

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 <li class="list"><a
                         href="https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ&ab_channel=ApnaCollege"
                         target="_blank" class="list" rel="noopener noreferrer">C++ Programming Language</a></li>
+                <li class="list"><a
+                        href="https://www.youtube.com/playlist?list=PLauivoElc3ggagradg8MfOZreCMmXMmJ-"
+                        target="_blank" class="list" rel="noopener noreferrer">Cp playlist</a></li>
             </ul>
             <li class="mainlist">Best Practice Question Sheet </li>
             <ul>
