Modification is done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="content">
         <ul>
-            <li class="mainlist">Learning resouces</li>
+            <li class="mainlist">Learning Resources</li>
             <ul>
                 <li class="list"> <a href="https://cp-algorithms.com/" class="list" target="_blank">CP Algorithm</a>
                 </li>
@@ -72,7 +72,7 @@
                         class="list" target="_blank" rel="noopener noreferrer">Dynamic Programming</a></li>
                 <li class="list"><a
                         href="https://www.youtube.com/watch?v=RCq5TYMZEwg&list=PLauivoElc3giVROwL-6g9hO-LlSen_NaV&ab_channel=Luv"
-                        target="_blank" rel="noopener noreferrer" class="list">Number Theroy</a></li>
+                        target="_blank" rel="noopener noreferrer" class="list">Number Theory</a></li>
                 <li class="list"><a href="https://www.youtube.com/watch?v=M0tgJaQAo60&ab_channel=Luv" class="list"
                         target="_blank" rel="noopener noreferrer">Time Complexity Analysis and Constraints</a></li>
                 <li class="list"><a
@@ -87,6 +87,9 @@
                 <li class="list"><a
                         href="https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ&ab_channel=ApnaCollege"
                         target="_blank" class="list" rel="noopener noreferrer">C++ Programming Language</a></li>
+                        <li class="list"><a
+                                href="https://www.youtube.com/watch?v=rZ41y93P2Qo&list=PL9gnSGHSqcnr_DxHsP7AW9ftq0AtAyYqJ"
+                                target="_blank" class="list" rel="noopener noreferrer">Data Structure And Algorithm</a></li>
             </ul>
             <li class="mainlist">Best Practice Question Sheet </li>
             <ul>
@@ -106,17 +109,22 @@
                 <li class="list"><a href="https://www.codechef.com/" target="_blank" class="list"
                         rel="noopener noreferrer">Codechef</a></li>
                 <li class="list"><a href="https://atcoder.jp/" class="list" target="_blank"
-                        rel="noopener noreferrer">Atcoder</a></li>
+                        rel="noopener noreferrer">AtCoder</a></li>
                 <li class="list"><a href="https://www.topcoder.com/thrive/tracks?track=Competitive%20Programming"
                         target="_blank" rel="noopener noreferrer" class="list">TopCoder</a></li>
                 <li class="list"><a href="https://leetcode.com/" class="list" target="_blank"
                         rel="noopener noreferrer">Leetcode</a></li>
+                <li class="list"><a href="https://www.hackerrank.com/" class="list" target="_blank"
+                        rel="noopener noreferrer">HackerRank</a></li>
+                 <li class="list"><a href="https://www.hackerearth.com/" class="list" target="_blank"
+                        rel="noopener noreferrer">HackerEarth</a></li>
+
             </ul>
         </ul>
     </div>
     <span class="changeviews"><span class="views"> Views : <div class="material-icons viewicon">visibility</div><span
                 class="counter" id="count"></span></span> </span>
-    You Can Contribute to this website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank"
+    You Can Contribute To This Website <a href="https://github.com/anuraggarg3/anuraggarg3.github.io" target="_blank"
         rel="noopener noreferrer" class="btn">Click here</a>
     <div style=" background-color:rgba(246, 246, 246) ;">
         <hr class="rule">
